--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <table cellspacing = "20">
-      <td><img src="me.jpg" alt="Dominik Profile Picture" height="150" /></td>
+      <td><img src="https://scontent.fprg2-1.fna.fbcdn.net/v/t1.0-9/93784813_2913430965406416_4911307339337826304_o.jpg?_nc_cat=111&_nc_sid=85a577&_nc_ohc=C0pnQWBjLT0AX86xz7E&_nc_ht=scontent.fprg2-1.fna&oh=1fc15202411fb0deb58e64ca5f142fa6&oe=5EFB294Fg" alt="Dominik Profile Picture" height="150" /></td>
       <td><h1>Dominik Grodl</h1>
         <p>
           <em
